src/objects/Surgery_Hospitalization__c.object
<CustomObject>
    <fields>
        <fullName>Admission_Date__c</fullName>
        <description>Admission Date</description>
        <inlineHelpText>Select Date</inlineHelpText>
        <label>Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surgeries / Hospitalizations</relationshipLabel>
        <relationshipName>Surgeries_Hospitalizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Discharge_Date__c</fullName>
        <description>Discharge Date</description>
        <inlineHelpText>Select Date, if remains hospitalized leave blank and update upon discharge</inlineHelpText>
        <label>Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Select Yes, Pending or Not Anticipated</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Not Anticipated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surgery_Type_Reason_for_Hospital_Visit__c</fullName>
        <description>Surgery Type/Reason for Hospital Visit</description>
        <inlineHelpText>Indicate date and type of surgery (as indicated on the operative report) and if applicable, reason for hospitalization (as indicated on the discharge summary)</inlineHelpText>
        <label>Surgery Type/Reason for Hospital Visit</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type</description>
        <inlineHelpText>Select Surgery, Hospitalization, or Surgery &amp; Hospitalization</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Hospitalization</fullName>
                </value>
                <value>
                    <fullName>Surgery &amp; Hospitalization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Surgery / Hospitalization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SH-{00000}</displayFormat>
        <label>Surgery / Hospitalization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surgeries / Hospitalizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>